# Amnesia

./: .gitignore  .pdm-python  .pdm.toml  .pre-commit-config.yaml  README.md  exam_hypercorn.py  pyproject.toml  pyrightconfig.json
.github/workflows/: pypi-release.yml  test.yml
src/: test-ws-starlette.py  test_aiohttp.py  test_transport.py
src/graia/amnesia/: element.py  interface.py  launch.py  log.py  manager.py  message.py  service.py  status.py  utilles.py
src/graia/amnesia/builtins/: aiohttp.py  common.py  httpx.py  memcache.py  starlette.py  utils.py  uvicorn.py
src/graia/amnesia/builtins/asgi/: __init__.py  __init__.pyi  asgitypes.py  common.py  hypercorn.py  middleware.py  uvicorn.py  winloop.py
src/graia/amnesia/builtins/sqla/: __init__.py  model.py  service.py  types.py  utils.py
src/graia/amnesia/json/: __init__.py  bootstrap.py  frontend.py  serializers.py
src/graia/amnesia/json/backend/: orjson.py  ujson.py
src/graia/amnesia/launch/: __init__.py  component.py  interface.py  manager.py  service.py
src/graia/amnesia/message/: __init__.py  chain.py  element.py  formatter.py
src/graia/amnesia/status/: abc.py  manager.py  standalone.py
src/graia/amnesia/transport/: __init__.py  interface.py  rider.py  signature.py  utilles.py
src/graia/amnesia/transport/common/: aiohttp.py  asgi.py  client.py  http.py  server.py  starlette.py  status.py  storage.py
src/graia/amnesia/transport/common/http/: __init__.py  extra.py  io.py  responses.py
src/graia/amnesia/transport/common/websocket/: __init__.py  event.py  io.py  operator.py  shortcut.py
src/launart/: __init__.py  component.py  interface.py  manager.py  service.py  utilles.py
src/statv/: __init__.py
tests/: test_message.py
